styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
   :root {
      --background: 0 0% 100%;
      --cursor: 240 5.9% 10%;
      --foreground: 240 4.8% 95.9%;
      --destructive: 0 84.2% 60.2%;
      --accent: 96, 94%, 21%;
      --input: 240 5.9% 10%;
      --radius: 0.5rem;
   }

   .dark {
      --background: 240 10% 3.9%;
      --foreground: 0, 2%, 22%, 0.295;
      --destructive: 0 62.8% 30.6%;
      --input: 240, 39%, 88%;
      --accent: 240, 54%, 65%;
      --cursor: 240, 74%, 77%;
      --radius: 0.5rem;
   }

   .light-green {
      --background: 0 0% 100%;
      --foreground: 240, 23%, 91%;
      --input: 142.1 76.2% 36.3%;
      --destructive: 0 84.2% 60.2%;
      --accent: 303, 15%, 50%;
      --cursor: 240, 74%, 77%;
      --radius: 0.5rem;
   }

   .dark-orange {
      --background: 20 14.3% 4.1%;
      --foreground: 41, 66%, 61%, 0.116;
      --input: 20.5 90.2% 48.2%;
      --destructive: 0 72.2% 50.6%;
      --accent: 11, 64%, 87%;
      --cursor: 325, 73%, 37%;
      --radius: 0.5rem;
   }

   .dark-green {
      --background: 20 14.3% 4.1%;
      --foreground: 158, 3%, 50%;
      --input: 142.1 70.6% 45.3%;
      --destructive: 0 62.8% 30.6%;
      --accent: 144.9 80.4% 10%;
      --cursor: 152, 89%, 32%;
      --radius: 0.5rem;
   }

   .light-orange {
      --background: 0 0% 100%;
      --foreground: 20, 14%, 4%, 0.068;
      --input: 24.6 95% 53.1%;
      --accent: 24, 56%, 52%;
      --destructive: 0 84.2% 60.2%;
      --cursor: 24 9.8% 10%;
      --radius: 0.5rem;
   }

   .dark-gray {
      --background: 220 10% 15%;
      --foreground: 70 5.2% 22.7%;
      --input: 0 0% 96.1%;
      --accent: 240 5.9% 50%;
      --destructive: 0 50% 50%;
      --cursor: 240 5.9% 75%;
      --radius: 0.5rem;
   }

   .midnight-blue {
      --background: 228 22% 12%;
      --foreground: 231 27.2% 44.7%;
      --input: 0 0% 97.3%;
      --accent: 164 91.8% 52.2%;
      --destructive: 0 72.8% 52.6%;
      --cursor: 228 45% 65%;
   }

   .ocean {
      --background: 193 60% 95%;
      --cursor: 191 70% 50%;
      --foreground: 191 49% 76%;
      --destructive: 0 100% 50%;
      --accent: 255 100% 30%;
      --input: 191 80% 30%;
      --radius: 0.5rem;
   }

   .girly {
      --background: 340 100% 95%;
      --cursor: 340 70% 50%;
      --foreground: 340 49% 76%;
      --destructive: 0 100% 50%;
      --accent: 298 49% 41%;
      --input: 340 80% 30%;
      --radius: 0.5rem;
   }

   .retro {
      --background: 245 0% 22%;
      --cursor: 0 0% 80%;
      --foreground: 0 0% 0%;
      --destructive: 298 49% 0%;
      --accent: 0 100% 100%;
      --input: 0 0% 50%;
      --radius: 0.5rem;
   }

   .sunshine {
      --background: 46 100% 78%;
      --cursor: 60 70% 40%;
      --foreground: 31 100% 67%;
      --destructive: 0 100% 50%;
      --accent: 20 84% 56%;
      --input: 46 100% 18%;
      --radius: 0.5rem;
   }

   .hacktoberfest {
      --background: 118, 66%, 58%;
      --cursor: 240 90% 5%;
      --foreground: 300 100% 35%;
      --destructive: 60 33% 90%;
      --accent: 0 0% 0%;
      --input: 120 30% 15%;
      --radius: 0.5rem;
   }

   .cyberpunk {
      --background: 219 17% 12%;
      --foreground: 190, 100%, 91%;
      --input: 281, 100%, 50%;
      --destructive: 0 100% 35%;
      --accent: 304, 100%, 46%;
      --cursor: 300, 100%, 50%;
      --border: 200, 100%, 50%;
      --radius: 0.5rem;
   }

   .chrismas {
      --background: 132, 8%, 13%;
      --foreground: 128, 56%, 17%;
      --input: 0, 93%, 30%;
      --destructive: 0 100% 50%;
      --accent: 45, 93%, 47%;
      --cursor: 45, 93%, 47%;
      --border: 200, 100%, 50%;
      --radius: 0.5rem;
   }

   body {
      font-feature-settings:
         'rlig' 1,
         'calt' 1;
      transition: cubic-bezier(1, 0, 0, 1);
      animation-duration: 300ms;
   }
}

.selected {
   @apply font-bold opacity-100 text-accent;
}

.word {
   @apply relative mt-0 mr-[6px] mb-1;
}

.wrong {
   @apply underline text-destructive animate-shake;
}

.right {
   @apply text-accent;
}

